--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="main-wrapper" data-stellar-background-ratio="0.5">
 						<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top col-sm-12" style="background: #FFF;padding: 10px 0 40px 0;position:fixed;z-index:11;">
 							<a class="navbar-brand" href="#">
-								<img src="../website/assets/images/top/logo.png" class="img-fluid mx-auto d-block"/>
+								<img src="assets/images/top/logo.png" class="img-fluid mx-auto d-block"/>
 							</a>
 						</nav>
             <div class="fixed-caption">
