--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <div class="main-wrapper" data-stellar-background-ratio="0.5">
-						<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top col-sm-12" style="background: #FFF;padding: 10px 0 40px 0;position:fixed;z-index:11;">
+						<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top col-sm-6" style="background: #FFF;padding: 0px 0 40px 0;position:fixed;z-index:11;margin-top:-25px;">
 							<a class="navbar-brand" href="#">
 								<img src="assets/images/top/logo.png" class="img-fluid mx-auto d-block"/>
 							</a>
