--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
                 </div> <!-- horse-car -->
 
             </section> <!-- bottom-section -->
-
+			<!-- strat music-box -->
+        <div class="music-box">
+            <button class="music-box-toggle-btn">
+            </button>
+        </div>
+        <!-- end music box -->
 
             <footer class="footer-section text-center">
                 <img src="assets/images/footer-text.png" alt="image">
