--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </section> <!-- bottom-section -->
 			<!-- strat music-box -->
         <div class="music-box">
-            <button class="music-box-toggle-btn">
+            <button class="music-box-toggle-btn" style="margin-bottom: 60px;">
             </button>
         </div>
         <!-- end music box -->
