--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </section> <!-- bottom-section -->
 			<!-- strat music-box -->
         <div class="music-box">
-            <button class="music-box-toggle-btn" style="margin-bottom:85px;heigh:60px;width:60px;">
+            <button class="music-box-toggle-btn" style="margin-bottom:85px;height:60px;width:60px;margin-right: -20px;">
             </button>
         </div>
         <!-- end music box -->
