--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
             </section> <!-- bottom-section -->
 			<!-- strat music-box -->
         <div class="music-box">
-            <button class="music-box-toggle-btn" style="margin-bottom:85px;height:60px;width:60px;margin-right: -20px;">
+            <button class="music-box-toggle-btn" 
+				style="margin-bottom:85px;height:60px;width:60px;margin-right: -20px;background-image:url('assets/images/top/phone.png');background-repeat:no-repeat;">
             </button>
         </div>
         <!-- end music box -->
